opam-version: "2.0"
name: "iso639"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/ocaml-iso639/"
doc: "http://paurkedal.github.io/ocaml-iso639/index.html"
bug-reports: "https://github.com/paurkedal/ocaml-iso639/issues"
depends: [
  "ocaml"
  "dune"
  "ocamlfind" {build}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/ocaml-iso639.git"
